--- a/sty/css/style.css
+++ b/sty/css/style.css
@@ -13,11 +13,31 @@ body {
     background: #f8f8f8;
     border-radius: 16px;
     padding: 32px;
+    flex-basis: 616px;
+}
+
+.card__avatar {
+    width: 148px;
+    height: 148px;
+    border-radius: 74px; 
+}
+
+.card__content {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 22px;
 }
 
 .card__description {
     line-height: 1.375;
     margin: 0;
+}
+
+.card__info {
+    flex-basis: 380px;
+    flex-grow: 1;
 }
 
 .card__link {
